[gd_scene load_steps=7 format=2]

[ext_resource path="res://slimenemy.tres" type="SpriteFrames" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/enemy_killed_sound.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90.1844, 28.0139 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.6041, 5.99084 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 24.5892 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 2147483651
script = ExtResource( 2 )
detectfloor = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.12247, 0 )
scale = Vector2( 7.2996, 5.64596 )
frames = ExtResource( 1 )
animation = "walk"
frame = 1
speed_scale = 0.7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.81949, 56.0665 )
shape = SubResource( 1 )

[node name="floordetector" type="RayCast2D" parent="."]
position = Vector2( 2.22725, 32.5178 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 18
collide_with_areas = true

[node name="topcheck" type="Area2D" parent="."]
position = Vector2( 1.18352, -18.9567 )
collision_layer = 16
collision_mask = 2147483681

[node name="CollisionShape2D" type="CollisionShape2D" parent="topcheck"]
position = Vector2( 20.7887, 1.25992 )
shape = SubResource( 2 )

[node name="leftcheck" type="Area2D" parent="."]
position = Vector2( 124.732, 58.5863 )
collision_layer = 2147483664
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftcheck"]
shape = SubResource( 3 )

[node name="leftcheck2" type="Area2D" parent="."]
position = Vector2( -109.613, 56.6965 )
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftcheck2"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="enemykilled" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 0.5
[connection signal="body_entered" from="topcheck" to="." method="_on_topcheck_body_entered"]
[connection signal="body_entered" from="leftcheck" to="." method="_on_sidecheck_body_entered"]
[connection signal="body_entered" from="leftcheck2" to="." method="_on_sidecheck_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
